leg.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <signal.h>
#define YYRULECOUNT 40

# include "tree.h"
# include "version.h"

# include <stdio.h>
# include <stdlib.h>
# include <unistd.h>
# include <string.h>
# include <libgen.h>
# include <assert.h>

  typedef struct Header Header;

  struct Header {
    char   *text;
    Header *next;
  };

  FILE *input= 0;

  int   verboseFlag= 0;

  static int	 lineNumber= 0;
  static char	*fileName= 0;
  static char	*trailer= 0;
  static Header	*headers= 0;

  void makeHeader(char *text);
  void makeTrailer(char *text);

  void yyerror(char *message);

# define YY_INPUT(buf, result, max)		\
  {						\
    int c= getc(input);				\
    if ('\n' == c || '\r' == c) ++lineNumber;	\
    result= (EOF == c) ? 0 : (*(buf)= c, 1);	\
  }

# define YY_LOCAL(T)	static T
# define YY_RULE(T)	static T

#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( mybegin= yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( myend= yyend= yypos, 1)
#endif
#ifndef YY_MYBEGIN
#define YY_MYBEGIN	( mybegin= yybegin= yypos, 1)
#endif
#ifndef YY_MYEND
#define YY_MYEND	( myend= yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YY_DIE
# define YY_DIE(args)	fprintf(stderr, args); exit(-1);
#endif
#ifndef YY_OUTPUT
# define YY_OUTPUT(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef mytext
#define mytext myText(yythisthunk->mybegin, yythisthunk->myend)
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end, mybegin, myend;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(yythunk *) yythisthunk= 0;
YY_VARIABLE(char *   ) yythisrule= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;
YY_VARIABLE(long long int) yyaccepted= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      if (yybuflen > 10000000) {
        YY_DIE("look ahead exceeds 10MB, giving up.\n");
      }
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

static char* yyunmatched(void) {
	static char copy[45];
	int pos = 0;
	while (pos < 40) {
		if (yypos+pos >= yylimit) break;
		char ch = yybuf[yypos+pos];
		if (ch == '\n') {
			copy[pos++] = '\\';
			copy[pos++] = 'n';
			break;
		}
		copy[pos++] = ch;
	}
	if (yypos+pos < yylimit) {
		copy[pos++]='.';
		copy[pos++]='.';
		copy[pos++]='.';
	}
	copy[pos] = '\0';
	return copy;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yyunmatched()));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yyunmatched()));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yyunmatched()));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yyunmatched()));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end, int mybegin, int myend)
{
  while (yythunkpos >= yythunkslen)
    {
      if (yythunkslen > 2000000) {
        YY_DIE("thunk storage exceeds 2MB, giving up.\n");
      }
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].mybegin=  mybegin;
  yythunks[yythunkpos].myend=    myend;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
      {
        if (yytextlen > 2000000) {
          YY_DIE("yytext exceeds 2MB, giving up.\n");
        }
        yytextlen *= 2;
        yytext= realloc(yytext, yytextlen);
      }
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(char *) myText(int begin, int end)
{
  yyText(begin, end);
  return yytext;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      yythisthunk = thunk;
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  YY_OUTPUT((yybuf, yypos));
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yyaccepted += yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_end_of_line(); /* 40 */
YY_RULE(int) yy_comment(); /* 39 */
YY_RULE(int) yy_space(); /* 38 */
YY_RULE(int) yy_braces(); /* 37 */
YY_RULE(int) yy_range(); /* 36 */
YY_RULE(int) yy_char(); /* 35 */
YY_RULE(int) yy_END(); /* 34 */
YY_RULE(int) yy_BEGIN(); /* 33 */
YY_RULE(int) yy_MYEND(); /* 32 */
YY_RULE(int) yy_MYEEND(); /* 31 */
YY_RULE(int) yy_MYBEGIN(); /* 30 */
YY_RULE(int) yy_MYBEEGIN(); /* 29 */
YY_RULE(int) yy_DOT(); /* 28 */
YY_RULE(int) yy_class(); /* 27 */
YY_RULE(int) yy_literal(); /* 26 */
YY_RULE(int) yy_CLOSE(); /* 25 */
YY_RULE(int) yy_OPEN(); /* 24 */
YY_RULE(int) yy_COLON(); /* 23 */
YY_RULE(int) yy_PLUS(); /* 22 */
YY_RULE(int) yy_STAR(); /* 21 */
YY_RULE(int) yy_QUESTION(); /* 20 */
YY_RULE(int) yy_primary(); /* 19 */
YY_RULE(int) yy_NOT(); /* 18 */
YY_RULE(int) yy_suffix(); /* 17 */
YY_RULE(int) yy_action(); /* 16 */
YY_RULE(int) yy_AND(); /* 15 */
YY_RULE(int) yy_prefix(); /* 14 */
YY_RULE(int) yy_BAR(); /* 13 */
YY_RULE(int) yy_sequence(); /* 12 */
YY_RULE(int) yy_SEMICOLON(); /* 11 */
YY_RULE(int) yy_expression(); /* 10 */
YY_RULE(int) yy_EQUAL(); /* 9 */
YY_RULE(int) yy_identifier(); /* 8 */
YY_RULE(int) yy_RPERCENT(); /* 7 */
YY_RULE(int) yy_end_of_file(); /* 6 */
YY_RULE(int) yy_trailer(); /* 5 */
YY_RULE(int) yy_definition(); /* 4 */
YY_RULE(int) yy_declaration(); /* 3 */
YY_RULE(int) yy__(); /* 2 */
YY_RULE(int) yy_grammar(); /* 1 */

YY_ACTION(void) yy_13_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_13_primary\n"));
   push(makePredicate("YY_END")); ;
}
YY_ACTION(void) yy_12_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_12_primary\n"));
   push(makePredicate("YY_BEGIN")); ;
}
YY_ACTION(void) yy_11_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_11_primary\n"));
   push(Sequence_append(makePredicate("YY_MYEND"),makeAction("YY_DOUBLE_END(yythisrule,mytext)"))); ;
}
YY_ACTION(void) yy_10_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_10_primary\n"));
   push(Sequence_append(makePredicate("YY_MYEND"),makeAction("YY_TRIPLE_END(yythisrule,mytext)"))); ;
}
YY_ACTION(void) yy_9_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_9_primary\n"));
   push(Sequence_append(makePredicate("YY_MYBEGIN"),makeAction("YY_DOUBLE_BEGIN(yythisrule)"))); ;
}
YY_ACTION(void) yy_8_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_8_primary\n"));
   push(Sequence_append(makePredicate("YY_MYBEGIN"),makeAction("YY_TRIPLE_BEGIN(yythisrule)"))); ;
}
YY_ACTION(void) yy_7_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_7_primary\n"));
   push(makeAction(yytext)); ;
}
YY_ACTION(void) yy_6_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_6_primary\n"));
   push(makeDot()); ;
}
YY_ACTION(void) yy_5_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_5_primary\n"));
   push(makeClass(yytext)); ;
}
YY_ACTION(void) yy_4_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_4_primary\n"));
   push(makeString(yytext)); ;
}
YY_ACTION(void) yy_3_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_3_primary\n"));
   push(makeName(findRule(yytext))); ;
}
YY_ACTION(void) yy_2_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_2_primary\n"));
   Node *name= makeName(findRule(yytext));  name->name.variable= pop();  push(name); ;
}
YY_ACTION(void) yy_1_primary(char *yytext, int yyleng)
{
  yythisrule = "primary";
  yyprintf((stderr, "do yy_1_primary\n"));
   push(makeVariable(yytext)); ;
}
YY_ACTION(void) yy_3_suffix(char *yytext, int yyleng)
{
  yythisrule = "suffix";
  yyprintf((stderr, "do yy_3_suffix\n"));
   push(makePlus (pop())); ;
}
YY_ACTION(void) yy_2_suffix(char *yytext, int yyleng)
{
  yythisrule = "suffix";
  yyprintf((stderr, "do yy_2_suffix\n"));
   push(makeStar (pop())); ;
}
YY_ACTION(void) yy_1_suffix(char *yytext, int yyleng)
{
  yythisrule = "suffix";
  yyprintf((stderr, "do yy_1_suffix\n"));
   push(makeQuery(pop())); ;
}
YY_ACTION(void) yy_3_prefix(char *yytext, int yyleng)
{
  yythisrule = "prefix";
  yyprintf((stderr, "do yy_3_prefix\n"));
   push(makePeekNot(pop())); ;
}
YY_ACTION(void) yy_2_prefix(char *yytext, int yyleng)
{
  yythisrule = "prefix";
  yyprintf((stderr, "do yy_2_prefix\n"));
   push(makePeekFor(pop())); ;
}
YY_ACTION(void) yy_1_prefix(char *yytext, int yyleng)
{
  yythisrule = "prefix";
  yyprintf((stderr, "do yy_1_prefix\n"));
   push(makePredicate(yytext)); ;
}
YY_ACTION(void) yy_1_sequence(char *yytext, int yyleng)
{
  yythisrule = "sequence";
  yyprintf((stderr, "do yy_1_sequence\n"));
   Node *f= pop();  push(Sequence_append(pop(), f)); ;
}
YY_ACTION(void) yy_1_expression(char *yytext, int yyleng)
{
  yythisrule = "expression";
  yyprintf((stderr, "do yy_1_expression\n"));
   Node *f= pop();  push(Alternate_append(pop(), f)); ;
}
YY_ACTION(void) yy_2_definition(char *yytext, int yyleng)
{
  yythisrule = "definition";
  yyprintf((stderr, "do yy_2_definition\n"));
   Node *e= pop();  Rule_setExpression(pop(), e); ;
}
YY_ACTION(void) yy_1_definition(char *yytext, int yyleng)
{
  yythisrule = "definition";
  yyprintf((stderr, "do yy_1_definition\n"));
   if (push(beginRule(findRule(yytext)))->rule.expression)
							    fprintf(stderr, "rule '%s' redefined\n", yytext); ;
}
YY_ACTION(void) yy_1_trailer(char *yytext, int yyleng)
{
  yythisrule = "trailer";
  yyprintf((stderr, "do yy_1_trailer\n"));
   makeTrailer(yytext); ;
}
YY_ACTION(void) yy_1_declaration(char *yytext, int yyleng)
{
  yythisrule = "declaration";
  yyprintf((stderr, "do yy_1_declaration\n"));
   makeHeader(yytext); ;
}

YY_RULE(int) yy_end_of_line()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "end_of_line"));
  {  int yypos2= yypos, yythunkpos2= yythunkpos;  if (!yymatchString("\r\n")) goto l3;  goto l2;
  l3:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('\n')) goto l4;  goto l2;
  l4:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('\r')) goto l1;
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "end_of_line", yyunmatched()));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "end_of_line", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_comment()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "comment"));  if (!yymatchChar('#')) goto l5;
  l6:;	
  {  int yypos7= yypos, yythunkpos7= yythunkpos;
  {  int yypos8= yypos, yythunkpos8= yythunkpos;  if (!yy_end_of_line()) goto l8;  goto l7;
  l8:;	  yypos= yypos8; yythunkpos= yythunkpos8;
  }  if (!yymatchDot()) goto l7;  goto l6;
  l7:;	  yypos= yypos7; yythunkpos= yythunkpos7;
  }  if (!yy_end_of_line()) goto l5;
  yyprintf((stderr, "  ok   %s @ %s\n", "comment", yyunmatched()));
  return 1;
  l5:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comment", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_space()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "space"));
  {  int yypos10= yypos, yythunkpos10= yythunkpos;  if (!yymatchChar(' ')) goto l11;  goto l10;
  l11:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yymatchChar('\t')) goto l12;  goto l10;
  l12:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yy_end_of_line()) goto l9;
  }
  l10:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "space", yyunmatched()));
  return 1;
  l9:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "space", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_braces()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "braces"));
  {  int yypos14= yypos, yythunkpos14= yythunkpos;  if (!yymatchChar('{')) goto l15;
  l16:;	
  {  int yypos17= yypos, yythunkpos17= yythunkpos;
  {  int yypos18= yypos, yythunkpos18= yythunkpos;  if (!yymatchChar('}')) goto l18;  goto l17;
  l18:;	  yypos= yypos18; yythunkpos= yythunkpos18;
  }  if (!yymatchDot()) goto l17;  goto l16;
  l17:;	  yypos= yypos17; yythunkpos= yythunkpos17;
  }  if (!yymatchChar('}')) goto l15;  goto l14;
  l15:;	  yypos= yypos14; yythunkpos= yythunkpos14;
  {  int yypos19= yypos, yythunkpos19= yythunkpos;  if (!yymatchChar('}')) goto l19;  goto l13;
  l19:;	  yypos= yypos19; yythunkpos= yythunkpos19;
  }  if (!yymatchDot()) goto l13;
  }
  l14:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "braces", yyunmatched()));
  return 1;
  l13:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "braces", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_range()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "range"));
  {  int yypos21= yypos, yythunkpos21= yythunkpos;  if (!yy_char()) goto l22;  if (!yymatchChar('-')) goto l22;  if (!yy_char()) goto l22;  goto l21;
  l22:;	  yypos= yypos21; yythunkpos= yythunkpos21;  if (!yy_char()) goto l20;
  }
  l21:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "range", yyunmatched()));
  return 1;
  l20:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "range", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_char()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "char"));
  {  int yypos24= yypos, yythunkpos24= yythunkpos;  if (!yymatchChar('\\')) goto l25;  if (!yymatchClass((unsigned char *)"\000\000\000\000\204\000\000\000\000\000\000\070\146\100\124\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;  goto l24;
  l25:;	  yypos= yypos24; yythunkpos= yythunkpos24;  if (!yymatchChar('\\')) goto l26;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\017\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  goto l24;
  l26:;	  yypos= yypos24; yythunkpos= yythunkpos24;  if (!yymatchChar('\\')) goto l27;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l27;
  {  int yypos28= yypos, yythunkpos28= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l28;  goto l29;
  l28:;	  yypos= yypos28; yythunkpos= yythunkpos28;
  }
  l29:;	  goto l24;
  l27:;	  yypos= yypos24; yythunkpos= yythunkpos24;
  {  int yypos30= yypos, yythunkpos30= yythunkpos;  if (!yymatchChar('\\')) goto l30;  goto l23;
  l30:;	  yypos= yypos30; yythunkpos= yythunkpos30;
  }  if (!yymatchDot()) goto l23;
  }
  l24:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "char", yyunmatched()));
  return 1;
  l23:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "char", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_END()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "END"));  if (!yymatchChar('>')) goto l31;  if (!yy__()) goto l31;
  yyprintf((stderr, "  ok   %s @ %s\n", "END", yyunmatched()));
  return 1;
  l31:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "END", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_BEGIN()
{int mybegin=yybegin, myend=yyend;
  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "BEGIN"));  if (!yymatchChar('<')) goto l32;  if (!yy__()) goto l32;
  yyprintf((stderr, "  ok   %s @ %s\n", "BEGIN", yyunmatched()));
  return 1;
  l32:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BEGIN", yyunmatched()));
  return 0;
}
YY_RULE(int) yy_MYEND()
